tests/fixtures/invalid/none_floordiv_dict.py
# Cannot floor divide None and Dict[str, int]
x: None = None // {"a": 1}
